--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -16,15 +16,15 @@ combos {
 
         combo_to_korean {
             timeout-ms = <50>;
-            key-positions = <17 18>;  // E와 I 키 위치 (BASE 레이어)
-            layers = <0>;             // BASE 레이어(0)에서만 작동
+            key-positions = <17 18>;
+            layers = <0>;
             bindings = <&to_korean>;
         };
         
         combo_to_english {
             timeout-ms = <50>;
-            key-positions = <17 18>;  // 같은 키 포지션 (KOR 레이어에서는 K와 L 위치)
-            layers = <1>;             // KOR 레이어(1)에서만 작동
+            key-positions = <17 18>;
+            layers = <1>;
             bindings = <&to_english>;
         };
 
@@ -32,7 +32,7 @@ combos {
   COMBO(l_rightclick, &mkp RCLK, 21 22, BASE, COMBO_TERM_SLOW)
   COMBO(l_middleclick, &mkp MCLK, 22 23, BASE, COMBO_TERM_SLOW)
 
-  COMBO(r_leftclick, &mkp LCLK, 17 18, BASE, COMBO_TERM_SLOW)
-  COMBO(r_rightclick, &mkp RCLK, 27 28, BASE, COMBO_TERM_SLOW)
-  COMBO(r_middleclick, &mkp MCLK, 26 27, BASE, COMBO_TERM_SLOW)
+  COMBO(r_leftclick, &mkp LCLK, 27 28, BASE, COMBO_TERM_SLOW)
+  COMBO(r_rightclick, &mkp RCLK, 28 28, BASE, COMBO_TERM_SLOW)
+  COMBO(r_middleclick, &mkp MCLK, 27 29, BASE, COMBO_TERM_SLOW)
 }; 
